Bug 944947 - label truncation is not fully supported in Australis menu widgets, r=Enn,MattN
UltraBlame original commit: 993ee55e02cb5dba3c07a10e07366c9cd0ad113f

--- a/toolkit/content/xul.css
+++ b/toolkit/content/xul.css
@@ -814,46 +814,6 @@ button
 )
 ;
 }
-toolbarbutton
-[
-type
-=
-"
-wrap
-"
-]
-{
--
-moz
--
-binding
-:
-url
-(
-"
-chrome
-:
-/
-/
-global
-/
-content
-/
-bindings
-/
-toolbarbutton
-.
-xml
-#
-toolbarbutton
--
-wrapping
--
-label
-"
-)
-;
-}
 toolbar
 [
 mode
@@ -878,6 +838,44 @@ text
 toolbarbutton
 -
 icon
+{
+display
+:
+none
+;
+}
+toolbarbutton
+:
+not
+(
+[
+wrap
+=
+"
+true
+"
+]
+)
+>
+.
+toolbarbutton
+-
+multiline
+-
+text
+toolbarbutton
+[
+wrap
+=
+"
+true
+"
+]
+>
+.
+toolbarbutton
+-
+text
 {
 display
 :
@@ -3948,7 +3946,9 @@ label
 .
 toolbarbutton
 -
-label
+multiline
+-
+text
 {
 -
 moz
